postcss/testData/inspections/customSelectors/emptySelectorList.pcss
@custom-selector :--hs<error descr="Custom selector at-rule should contain selector list">;</error>
@custom-selector :--hs <error descr="Custom selector at-rule should contain selector list">;</error>
@custom-selector :--hs
<error descr="Custom selector at-rule should contain selector list">;</error>
@custom-selector :--hs<EOLError descr="';' expected"></EOLError>